espresso (0.99.17) UNRELEASED; urgency=low

  * Add X-Ubuntu-Gettext-Domain=espresso to espresso-gtkui.desktop (although
    it's useless until we get internationalisation set up properly).
  * Open /var/log/installer/espresso with line-buffering so that error
    messages appear there more quickly during testing.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 23 Feb 2006 20:06:28 +0000

espresso (0.99.16) dapper; urgency=low

  * Explicitly decode strings returned by debconf as UTF-8, since apparently
    we get confused when running with the KDE frontend otherwise (which
    presumably does something funky with Python's default encoding).
  * Rename Changelog to Changelog.Guadalinex to avoid confusion. Ubuntu
    changes (i.e. everything since renaming to espresso) go here.
  * Add e-map widget, cut-and-pasted from evolution via gnome-system-tools
    (ugh).
  * Basic autoconfiscation for the above.
  * Add initial Python bindings for e-map.
  * Add an espresso.tz module for various bits of timezone handling.
  * First cut at timezone map widget, based on a translation of code in
    gnome-system-tools into Python. Depend on espresso-timezone.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 23 Feb 2006 13:26:13 +0000

espresso (0.99.15) dapper; urgency=low

  * Redirect sys.stderr to /var/log/installer/espresso so that we have a
    better chance of diagnosing problems after the fact.
  * Add FilteredCommand.value_index helper from oem-config.
  * Add support for components optionally returning a third argument from
    FilteredCommand.prepare(), interpreted as a dictionary of extra
    environment variables to set for the subprocess.
  * Add a language page, using espresso-locale. The locale is set in the
    target system and used for debconf coprocesses, although not yet for
    translatable strings in the Espresso core.
  * Add a FilteredCommand.cleanup() hook that can be overridden by
    components to perform cleanup tasks after their subprocess exits.