@@ -4,6 +4,8 @@ espresso (0.99.17) UNRELEASED; urgency=low
     it's useless until we get internationalisation set up properly).
   * Open /var/log/installer/espresso with line-buffering so that error
     messages appear there more quickly during testing.
+  * Fix debconffilter to handle SET and SUBST commands whose values consist
+    of more than one word.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 23 Feb 2006 20:06:28 +0000
 
